            nRF52840: workaround for SDK15 bug that stops softdevice restart when WDT enabled
            Disallow template strings in object decls like {`hello`:1} (fix #2006)
            Bangle.js: Add support for global colour themes which affect g.clear/g.reset (fix #499)
            Bangle.js: Switch beep/buzz to IRQs (keeps time correct even when JS is busy)

     2v09 : Bangle.js: increase default advertising interval from 375 to 200ms to ease connections
            Fix Math.acos for negative values (fix #1950)
            nRF5x: Add callback param to 'NRF.restart', allowing code to be called with softdevice disabled
            Bangle.js: fix require("locale").time(new Date()) for default locale
            Now use exponents when printing doubles >= 1E21 or < 1E-6 (fix #1489)
            Fix Regexp handling of unescaped '.' in character group: /[.]/ (fix #1948)
            Now error if using (unsupported) RegExp backreferences
            nRF52: Ensure SPI 1 byte DMA errata workaround isn't applied to non-52832 parts
            nRF52: When outputting assertions, if we have an terminal device (eg LCD) use that
            When load(filename) is used, set global variable __FILE__ to the filename
            Util Timer no longer uses RTC - works based on estimated time from the hardware timer itself (fix #1749, ref #1444)
            Pull in fixed SHT3C.min.js for RAK5010
            Add support for relaying full touchscreen events in devices that support it
            Fix flip-on-idle behaviour for non-Bangle.js smartwatch ports
            Add support for buttonless bootloader (first boot only, times out after 5 seconds)
            Fix emulator crash if Graphics.drawPoly used with odd number of points
            Graphics.fillPoly now errors if >64 points (prev was 63)
            Graphics: Support for palettes supplied in image strings
            nRF52840: Ensure internal voltage regulator is set to 3.3v (not 1.8v default) at boot