@@ -11,6 +11,7 @@
             Disallow template strings in object decls like {`hello`:1} (fix #2006)
             Bangle.js: Add support for global colour themes which affect g.clear/g.reset (fix #499)
             Bangle.js: Switch beep/buzz to IRQs (keeps time correct even when JS is busy)
+            Add E.decodeUTF8 to allow UTF8 to be decoded into standard 8 bit characters
 
      2v09 : Bangle.js: increase default advertising interval from 375 to 200ms to ease connections
             Fix Math.acos for negative values (fix #1950)
